@@ -3816,7 +3816,7 @@ CMD ["catalina.sh" "run"]
 ## `geonetwork:4`
 
 ```console
-$ docker pull geonetwork@sha256:6e9c63891cb00d6b93ab56e4d569f315f3968aa34e90b1ac5105d9f36696d654
+$ docker pull geonetwork@sha256:1befaf9030e6f82af9af3954c7445b6da9fc83673339f420e7f4c1c8148009e3
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -3827,14 +3827,14 @@ $ docker pull geonetwork@sha256:6e9c63891cb00d6b93ab56e4d569f315f3968aa34e90b1ac
 ### `geonetwork:4` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:f0dd1560ff0aab8ab4a2a3d41794ff8dd0de4e74eabd79478801c4eaecc2a88c
+$ docker pull geonetwork@sha256:27c06f5fd954964eea4ce207c1e76c47d55d75541e11d33d27805cbdda29cfe2
 ```
 
 -	Docker Version: 23.0.11
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **488.3 MB (488318911 bytes)**  
+-	Total Size: **488.5 MB (488518480 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:4ee9da836586bfed6a56f4957e61ce2fc970122d55fa0134209a4e9190d613fa`
+-	Image ID: `sha256:75c52a94cb99579e362fe9554483607ab8e7097ddc24710c387597d51434350d`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -3915,23 +3915,23 @@ RUN apt-get -y update &&     apt-get -y install --no-install-recommends         
 USER jetty
 # Wed, 05 Jun 2024 12:08:46 GMT
 ENV GN_FILE=geonetwork.war
-# Wed, 05 Jun 2024 12:08:46 GMT
-ENV GN_VERSION=4.4.4
-# Wed, 05 Jun 2024 12:08:46 GMT
-ENV GN_DOWNLOAD_MD5=f2cd38d91dc0db4a126d0573b97e9103
-# Wed, 05 Jun 2024 12:09:03 GMT
+# Tue, 18 Jun 2024 18:20:42 GMT
+ENV GN_VERSION=4.4.5
+# Tue, 18 Jun 2024 18:20:42 GMT
+ENV GN_DOWNLOAD_MD5=a7b04339041e1e8217435dc6273ac3b8
+# Tue, 18 Jun 2024 18:21:47 GMT
 RUN cd /opt/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
-# Wed, 05 Jun 2024 12:09:05 GMT
+# Tue, 18 Jun 2024 18:21:48 GMT
 COPY file:996df24c69b17d351426a6c0c0dfb153f784c21af81ae4ec36afa187063e1eda in /usr/local/share/geonetwork/geonetwork_context_template.xml 
-# Wed, 05 Jun 2024 12:09:05 GMT
+# Tue, 18 Jun 2024 18:21:48 GMT
 COPY file:d79abcd242af427d06aee0b458cf9b6d258c1203248aa30f6246fc26f5727df3 in /geonetwork-entrypoint.sh 
-# Wed, 05 Jun 2024 12:09:06 GMT
+# Tue, 18 Jun 2024 18:21:49 GMT
 RUN java -jar /usr/local/jetty/start.jar --create-startd --add-module=http-forwarded
-# Wed, 05 Jun 2024 12:09:06 GMT
+# Tue, 18 Jun 2024 18:21:49 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Wed, 05 Jun 2024 12:09:06 GMT
+# Tue, 18 Jun 2024 18:21:49 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Wed, 05 Jun 2024 12:09:06 GMT
+# Tue, 18 Jun 2024 18:21:49 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -3968,34 +3968,34 @@ VOLUME [/catalogue-data]
 		Last Modified: Wed, 05 Jun 2024 12:10:27 GMT  
 		Size: 482.9 KB (482890 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:f3ebfaf2a536c282a90b9383dd1992f000aba45ef83a233a5caccf7cec786762`  
-		Last Modified: Wed, 05 Jun 2024 12:10:42 GMT  
-		Size: 286.6 MB (286564505 bytes)  
+	-	`sha256:140ad982f30c6ce6baee6b173449d3e377c89e20c7eb53cce1214ac2501360ad`  
+		Last Modified: Tue, 18 Jun 2024 18:22:48 GMT  
+		Size: 286.8 MB (286764073 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:0213d87abe79afa7f71f88141f457f64254038ee2ec4160ac35af7f8e3dd740c`  
-		Last Modified: Wed, 05 Jun 2024 12:10:27 GMT  
-		Size: 553.0 B  
+	-	`sha256:c157c6b21e78c72dec84efad45d7cd2b5ee9d3f39b3c285f2963041209051672`  
+		Last Modified: Tue, 18 Jun 2024 18:22:33 GMT  
+		Size: 555.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:d84f6ebc7af02915d8347c354da3ff3a79f23492d0f11e6e4fe5fb3f65a4c6a2`  
-		Last Modified: Wed, 05 Jun 2024 12:10:27 GMT  
+	-	`sha256:26855f3b3976044458252213fbf1fb97b016b6e841d9f0bd3421ced2ed0f31c8`  
+		Last Modified: Tue, 18 Jun 2024 18:22:33 GMT  
 		Size: 567.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:dad531c8148cce7f787ea54eff41a18940b0474cbdeef460b8f1a1d8c456d811`  
-		Last Modified: Wed, 05 Jun 2024 12:10:27 GMT  
-		Size: 139.0 B  
+	-	`sha256:fdf2140b15cb8c54af240fa037179e59ee21a169527295846fca049b1a603fb9`  
+		Last Modified: Tue, 18 Jun 2024 18:22:33 GMT  
+		Size: 138.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ### `geonetwork:4` - linux; arm64 variant v8
 
 ```console
-$ docker pull geonetwork@sha256:f1bdd80a13fd17655895ac0ba3d821e6c45ccc5976e0295bf280135bc19f7bb8
+$ docker pull geonetwork@sha256:bbc95f789209cffa361bcc3b04d26ebdf568818d3fc762df2b201f1b2292f947
 ```
 
 -	Docker Version: 23.0.11
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **483.6 MB (483598643 bytes)**  
+-	Total Size: **483.8 MB (483798156 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:c76e6145d6a751d038b2fa31da0bbc8e19017dd085255c31068b57e9a0e27487`
+-	Image ID: `sha256:026e88f963e2339602be8553e3386b8e6d20746f8843a6f95a621266bd7ec0b7`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -4076,23 +4076,23 @@ RUN apt-get -y update &&     apt-get -y install --no-install-recommends         
 USER jetty
 # Wed, 05 Jun 2024 11:51:01 GMT
 ENV GN_FILE=geonetwork.war
-# Wed, 05 Jun 2024 11:51:01 GMT
-ENV GN_VERSION=4.4.4
-# Wed, 05 Jun 2024 11:51:01 GMT
-ENV GN_DOWNLOAD_MD5=f2cd38d91dc0db4a126d0573b97e9103
-# Wed, 05 Jun 2024 11:52:04 GMT
+# Tue, 18 Jun 2024 18:40:59 GMT
+ENV GN_VERSION=4.4.5
+# Tue, 18 Jun 2024 18:40:59 GMT
+ENV GN_DOWNLOAD_MD5=a7b04339041e1e8217435dc6273ac3b8
+# Tue, 18 Jun 2024 18:42:02 GMT
 RUN cd /opt/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
-# Wed, 05 Jun 2024 11:52:07 GMT
+# Tue, 18 Jun 2024 18:42:04 GMT
 COPY file:996df24c69b17d351426a6c0c0dfb153f784c21af81ae4ec36afa187063e1eda in /usr/local/share/geonetwork/geonetwork_context_template.xml 
-# Wed, 05 Jun 2024 11:52:07 GMT
+# Tue, 18 Jun 2024 18:42:05 GMT
 COPY file:d79abcd242af427d06aee0b458cf9b6d258c1203248aa30f6246fc26f5727df3 in /geonetwork-entrypoint.sh 
-# Wed, 05 Jun 2024 11:52:08 GMT
+# Tue, 18 Jun 2024 18:42:06 GMT
 RUN java -jar /usr/local/jetty/start.jar --create-startd --add-module=http-forwarded
-# Wed, 05 Jun 2024 11:52:08 GMT
+# Tue, 18 Jun 2024 18:42:06 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Wed, 05 Jun 2024 11:52:08 GMT
+# Tue, 18 Jun 2024 18:42:06 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Wed, 05 Jun 2024 11:52:08 GMT
+# Tue, 18 Jun 2024 18:42:06 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -4129,27 +4129,27 @@ VOLUME [/catalogue-data]
 		Last Modified: Wed, 05 Jun 2024 11:53:25 GMT  
 		Size: 480.9 KB (480915 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:43834d290f9c5212ccdfc87b31556dff7b59f3179ae94c0c297b56e330e8f4b7`  
-		Last Modified: Wed, 05 Jun 2024 11:53:37 GMT  
-		Size: 286.6 MB (286564537 bytes)  
+	-	`sha256:af38ddd741aa09f14d2c2e775b86641ecbf348009db7ed439373c49e2728496e`  
+		Last Modified: Tue, 18 Jun 2024 18:42:56 GMT  
+		Size: 286.8 MB (286764051 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:9c058a84bf5bfe5a32dfc15ccee8e5d69e8395b55582cd723beeda27152febb3`  
-		Last Modified: Wed, 05 Jun 2024 11:53:25 GMT  
-		Size: 555.0 B  
+	-	`sha256:ed405195021f3c5fb1ab2726b8c96ea11d181971f2ade316000a101490ff7b57`  
+		Last Modified: Tue, 18 Jun 2024 18:42:44 GMT  
+		Size: 554.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:a0ff7acfca8cdf6827d8c48b38dc27f0ced40718bbb88280e345c2464e96ac33`  
-		Last Modified: Wed, 05 Jun 2024 11:53:25 GMT  
-		Size: 569.0 B  
+	-	`sha256:0d0756bff4e0d48056e6b2f7b883be5fbc469ebb0cc32589bdda92d3ade2671e`  
+		Last Modified: Tue, 18 Jun 2024 18:42:43 GMT  
+		Size: 568.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:2dc63bcea23bb796ad83ea65b74efc2c84f6878395d6732ae211f80e31e79d50`  
-		Last Modified: Wed, 05 Jun 2024 11:53:25 GMT  
-		Size: 137.0 B  
+	-	`sha256:cacf6862df07fdf3900b5bbed12df478f3da6ca611db88928951d641631ba2fa`  
+		Last Modified: Tue, 18 Jun 2024 18:42:43 GMT  
+		Size: 138.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:4.2`
 
 ```console
-$ docker pull geonetwork@sha256:1b2a153b0d344de96aabd70bd2ca5af8b01892ab874ed589418a406b55d2f71a
+$ docker pull geonetwork@sha256:ff153c5bc6e4c7b99bf7a77de6b23c9c56bfc2602203fb6dacf7ac732f2e016e
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -4160,14 +4160,14 @@ $ docker pull geonetwork@sha256:1b2a153b0d344de96aabd70bd2ca5af8b01892ab874ed589
 ### `geonetwork:4.2` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:3a4578cd86723dae128a442e342360dedfd2a1bd0b59e038ba48c61c44afd21c
+$ docker pull geonetwork@sha256:db518a7c46b62a6b22c6c5d571b6c9f4aa8a9a8ceac035dc8d3fe590a92090b0
 ```
 
 -	Docker Version: 23.0.11
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **462.4 MB (462383916 bytes)**  
+-	Total Size: **461.8 MB (461780602 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:74697c112c08b6d728bb61b76701150e05c89f5863d4fdf8baef1f8469bb4ddb`
+-	Image ID: `sha256:8b35c30a0ad3928c21f43e19f3841f06410d1811dcccfcd9fadde689f7a484ab`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -4242,19 +4242,19 @@ RUN apt-get -y update &&     apt-get -y install --no-install-recommends         
 USER jetty
 # Wed, 05 Jun 2024 12:07:21 GMT
 ENV GN_FILE=geonetwork.war
-# Wed, 05 Jun 2024 12:07:21 GMT
-ENV GN_VERSION=4.2.9
-# Wed, 05 Jun 2024 12:07:21 GMT
-ENV GN_DOWNLOAD_MD5=d8d7f8bc64384769859d3670b8571af3
-# Wed, 05 Jun 2024 12:08:29 GMT
+# Tue, 18 Jun 2024 18:20:18 GMT
+ENV GN_VERSION=4.2.10
+# Tue, 18 Jun 2024 18:20:18 GMT
+ENV GN_DOWNLOAD_MD5=0f33998c61e7cf74de6bb5e451a571b3
+# Tue, 18 Jun 2024 18:20:37 GMT
 RUN cd /var/lib/jetty/webapps/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
-# Wed, 05 Jun 2024 12:08:30 GMT
+# Tue, 18 Jun 2024 18:20:38 GMT
 COPY file:ee50548f90174fcbec925e62c4a2db15e8eb83e581b0f78e369d30fd096dcd23 in /geonetwork-entrypoint.sh 
-# Wed, 05 Jun 2024 12:08:30 GMT
+# Tue, 18 Jun 2024 18:20:38 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Wed, 05 Jun 2024 12:08:30 GMT
+# Tue, 18 Jun 2024 18:20:38 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Wed, 05 Jun 2024 12:08:30 GMT
+# Tue, 18 Jun 2024 18:20:38 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -4291,26 +4291,26 @@ VOLUME [/catalogue-data]
 		Last Modified: Wed, 05 Jun 2024 12:10:03 GMT  
 		Size: 482.9 KB (482942 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:2154e810635678f8e535f887f8ce4c70ce08afe2cf7c62ef1acb78e8e5f33a78`  
-		Last Modified: Wed, 05 Jun 2024 12:10:18 GMT  
-		Size: 302.5 MB (302536085 bytes)  
+	-	`sha256:c621893622f46914715e2c879d2afcca8c12da7190fa21d79403a7c5c926c2a6`  
+		Last Modified: Tue, 18 Jun 2024 18:22:24 GMT  
+		Size: 301.9 MB (301932770 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:cf1debd50a47d33ae30162c64daafd3de2e9ac5b418b1c9c527af273fce8d8b9`  
-		Last Modified: Wed, 05 Jun 2024 12:10:03 GMT  
-		Size: 966.0 B  
+	-	`sha256:3f5443376a6b5c5bc8b786b885dc3f9852d57cad8b8c49d89c4e559dda2318ae`  
+		Last Modified: Tue, 18 Jun 2024 18:22:08 GMT  
+		Size: 967.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ### `geonetwork:4.2` - linux; arm64 variant v8
 
 ```console
-$ docker pull geonetwork@sha256:bbd6827ee0ccf5d4fc632ea563ca455af5a9ebfe453193c4869759fb2a2bdf43
+$ docker pull geonetwork@sha256:7160bd7694a44ffc2318c5a6ced73cddc2a1eb6bcbe102d18c362a1d27f1513d
 ```
 
 -	Docker Version: 23.0.11
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **460.0 MB (459961533 bytes)**  
+-	Total Size: **459.4 MB (459358062 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:1a8480e964e130430ce9b2c5ec1e565a1703b76ee5159d0ea60e5a8ff25a3040`
+-	Image ID: `sha256:1588c5a23d7e096d0bbbdb4304c5210097aefc141f597fcc3ef8a8a799ea79e0`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -4385,19 +4385,19 @@ RUN apt-get -y update &&     apt-get -y install --no-install-recommends         
 USER jetty
 # Wed, 05 Jun 2024 11:49:38 GMT
 ENV GN_FILE=geonetwork.war
-# Wed, 05 Jun 2024 11:49:38 GMT
-ENV GN_VERSION=4.2.9
-# Wed, 05 Jun 2024 11:49:38 GMT
-ENV GN_DOWNLOAD_MD5=d8d7f8bc64384769859d3670b8571af3
-# Wed, 05 Jun 2024 11:50:44 GMT
+# Tue, 18 Jun 2024 18:39:36 GMT
+ENV GN_VERSION=4.2.10
+# Tue, 18 Jun 2024 18:39:36 GMT
+ENV GN_DOWNLOAD_MD5=0f33998c61e7cf74de6bb5e451a571b3
+# Tue, 18 Jun 2024 18:40:43 GMT
 RUN cd /var/lib/jetty/webapps/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
-# Wed, 05 Jun 2024 11:50:47 GMT
+# Tue, 18 Jun 2024 18:40:45 GMT
 COPY file:ee50548f90174fcbec925e62c4a2db15e8eb83e581b0f78e369d30fd096dcd23 in /geonetwork-entrypoint.sh 
-# Wed, 05 Jun 2024 11:50:47 GMT
+# Tue, 18 Jun 2024 18:40:45 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Wed, 05 Jun 2024 11:50:47 GMT
+# Tue, 18 Jun 2024 18:40:45 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Wed, 05 Jun 2024 11:50:47 GMT
+# Tue, 18 Jun 2024 18:40:46 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -4434,28 +4434,316 @@ VOLUME [/catalogue-data]
 		Last Modified: Wed, 05 Jun 2024 11:53:04 GMT  
 		Size: 481.0 KB (481014 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:e1f41752d23427294b796d85f2799682e927bf1a7481bf334ce46874baaa9036`  
-		Last Modified: Wed, 05 Jun 2024 11:53:16 GMT  
-		Size: 302.5 MB (302536164 bytes)  
+	-	`sha256:51ca639197055891fb102e747e0a4a56f5ee5e9f448f1cead30373665698de88`  
+		Last Modified: Tue, 18 Jun 2024 18:42:34 GMT  
+		Size: 301.9 MB (301932691 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:3af35d70581370e44baf9a183fb768c7ed7a055f4a4fe30a6a15f6915f9fd1d6`  
-		Last Modified: Wed, 05 Jun 2024 11:53:03 GMT  
-		Size: 965.0 B  
+	-	`sha256:5b9d8d8fd550834fa4f45bf47a65eaa711070819d89d03453e0e6a7e5bef5aaa`  
+		Last Modified: Tue, 18 Jun 2024 18:42:20 GMT  
+		Size: 967.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:4.2.10`
 
 ```console
-$ docker pull geonetwork@sha256:eb37f58646a901dc7727cf448cae36daaefaba79de33b5058dab79aa4c04aefb
+$ docker pull geonetwork@sha256:ff153c5bc6e4c7b99bf7a77de6b23c9c56bfc2602203fb6dacf7ac732f2e016e
 ```
 
--	Manifest MIME: `application/vnd.oci.image.index.v1+json`
--	Platforms: 0
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
+-	Platforms: 2
+	-	linux; amd64
+	-	linux; arm64 variant v8
+
+### `geonetwork:4.2.10` - linux; amd64
+
+```console
+$ docker pull geonetwork@sha256:db518a7c46b62a6b22c6c5d571b6c9f4aa8a9a8ceac035dc8d3fe590a92090b0
+```
+
+-	Docker Version: 23.0.11
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
+-	Total Size: **461.8 MB (461780602 bytes)**  
+	(compressed transfer size, not on-disk size)
+-	Image ID: `sha256:8b35c30a0ad3928c21f43e19f3841f06410d1811dcccfcd9fadde689f7a484ab`
+-	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
+-	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
+
+```dockerfile
+# Mon, 03 Jun 2024 17:10:41 GMT
+ARG RELEASE
+# Mon, 03 Jun 2024 17:10:41 GMT
+ARG LAUNCHPAD_BUILD_ARCH
+# Mon, 03 Jun 2024 17:10:41 GMT
+LABEL org.opencontainers.image.ref.name=ubuntu
+# Mon, 03 Jun 2024 17:10:41 GMT
+LABEL org.opencontainers.image.version=20.04
+# Mon, 03 Jun 2024 17:10:43 GMT
+ADD file:e7cff353f027ecf0a2cb1cdd51714de3b083a11a0d965f104489f9a7e6925056 in / 
+# Mon, 03 Jun 2024 17:10:43 GMT
+CMD ["/bin/bash"]
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENV JAVA_HOME=/opt/java/openjdk
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENV PATH=/opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENV LANG=en_US.UTF-8 LANGUAGE=en_US:en LC_ALL=en_US.UTF-8
+# Tue, 23 Apr 2024 20:51:38 GMT
+RUN set -eux;     apt-get update;     DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends         curl         wget         fontconfig         ca-certificates p11-kit         tzdata         locales     ;     echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen;     locale-gen en_US.UTF-8;     rm -rf /var/lib/apt/lists/* # buildkit
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENV JAVA_VERSION=jdk8u412-b08
+# Tue, 23 Apr 2024 20:51:38 GMT
+RUN set -eux;     ARCH="$(dpkg --print-architecture)";     case "${ARCH}" in        aarch64|arm64)          ESUM='3504d748a93f23cac8c060bd33231bd51e90dcb620f38dadc6239b6cd2a5011c';          BINARY_URL='https://github.com/adoptium/temurin8-binaries/releases/download/jdk8u412-b08/OpenJDK8U-jdk_aarch64_linux_hotspot_8u412b08.tar.gz';          ;;        amd64|i386:x86-64)          ESUM='b9884a96f78543276a6399c3eb8c2fd8a80e6b432ea50e87d3d12d495d1d2808';          BINARY_URL='https://github.com/adoptium/temurin8-binaries/releases/download/jdk8u412-b08/OpenJDK8U-jdk_x64_linux_hotspot_8u412b08.tar.gz';          ;;        armhf|arm)          ESUM='be4aff6fa7bf6515f16f93dcaf9fdc61853fe1ef0d25b08a1bb1cf6e3d047391';          BINARY_URL='https://github.com/adoptium/temurin8-binaries/releases/download/jdk8u412-b08/OpenJDK8U-jdk_arm_linux_hotspot_8u412b08.tar.gz';          apt-get update;          DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends libatomic1;          rm -rf /var/lib/apt/lists/*;          ;;        ppc64el|powerpc:common64)          ESUM='6b7ed7996788075e182dd33349288346240fbce540e50fd77aecfc309a5ada19';          BINARY_URL='https://github.com/adoptium/temurin8-binaries/releases/download/jdk8u412-b08/OpenJDK8U-jdk_ppc64le_linux_hotspot_8u412b08.tar.gz';          ;;        *)          echo "Unsupported arch: ${ARCH}";          exit 1;          ;;     esac;     wget --progress=dot:giga -O /tmp/openjdk.tar.gz ${BINARY_URL};     echo "${ESUM} */tmp/openjdk.tar.gz" | sha256sum -c -;     mkdir -p "$JAVA_HOME";     tar --extract         --file /tmp/openjdk.tar.gz         --directory "$JAVA_HOME"         --strip-components 1         --no-same-owner     ;     rm -f /tmp/openjdk.tar.gz ${JAVA_HOME}/lib/src.zip;     find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf;     ldconfig; # buildkit
+# Tue, 23 Apr 2024 20:51:38 GMT
+RUN set -eux;     echo "Verifying install ...";     echo "javac -version"; javac -version;     echo "java -version"; java -version;     echo "Complete." # buildkit
+# Tue, 23 Apr 2024 20:51:38 GMT
+COPY entrypoint.sh /__cacert_entrypoint.sh # buildkit
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENTRYPOINT ["/__cacert_entrypoint.sh"]
+# Wed, 05 Jun 2024 08:33:14 GMT
+ENV JETTY_VERSION=9.4.54.v20240208
+# Wed, 05 Jun 2024 08:33:15 GMT
+ENV JETTY_HOME=/usr/local/jetty
+# Wed, 05 Jun 2024 08:33:15 GMT
+ENV JETTY_BASE=/var/lib/jetty
+# Wed, 05 Jun 2024 08:33:15 GMT
+ENV TMPDIR=/tmp/jetty
+# Wed, 05 Jun 2024 08:33:15 GMT
+ENV PATH=/usr/local/jetty/bin:/opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Wed, 05 Jun 2024 08:33:15 GMT
+ENV JETTY_TGZ_URL=https://repo1.maven.org/maven2/org/eclipse/jetty/jetty-home/9.4.54.v20240208/jetty-home-9.4.54.v20240208.tar.gz
+# Wed, 05 Jun 2024 08:33:15 GMT
+ENV JETTY_GPG_KEYS=AED5EE6C45D0FE8D5D1B164F27DED4BF6216DB8F 	2A684B57436A81FA8706B53C61C3351A438A3B7D 	5989BAF76217B843D66BE55B2D0E1FB8FE4B68B4 	B59B67FD7904984367F931800818D9D68FB67BAC 	BFBB21C246D7776836287A48A04E0C74ABB35FEA 	8B096546B1A8F02656B15D3B1677D141BCF3584D 	F254B35617DC255D9344BCFA873A8E86B4372146 	E22488CC94F63E3FC928536C4241C08270D999C3
+# Wed, 05 Jun 2024 08:33:39 GMT
+RUN set -xe ; 	export savedAptMark="$(apt-mark showmanual)" ; 	mkdir -p $TMPDIR ; 	apt-get update ; 	apt-get install -y --no-install-recommends 		ca-certificates 		p11-kit 		gnupg2 		curl 		; 	export GNUPGHOME=/jetty-keys ; 	mkdir -p "$GNUPGHOME" ; 	for key in $JETTY_GPG_KEYS; do 		gpg --batch --keyserver "hkps://keyserver.ubuntu.com" --recv-keys "$key"; 	done ; 	mkdir -p "$JETTY_HOME" ; 	cd $JETTY_HOME ; 	curl -SL "$JETTY_TGZ_URL" -o jetty.tar.gz ; 	curl -SL "$JETTY_TGZ_URL.asc" -o jetty.tar.gz.asc ; 	gpg --batch --verify jetty.tar.gz.asc jetty.tar.gz ; 	tar -xvf jetty.tar.gz --strip-components=1 ; 	sed -i '/jetty-logging/d' etc/jetty.conf ; 	mkdir -p "$JETTY_BASE" ; 	cd $JETTY_BASE ; 	case "$JETTY_VERSION" in 		"12."*) START_MODULES="server,http,ext,resources" ;; 		*) START_MODULES="server,http,deploy,ext,resources,jsp,jstl,websocket" ;; 	esac ; 	java -jar "$JETTY_HOME/start.jar" --create-startd 		--add-to-start="$START_MODULES" ; 	groupadd -r jetty && useradd -r -g jetty jetty ; 	chown -R jetty:jetty "$JETTY_HOME" "$JETTY_BASE" "$TMPDIR" ; 	usermod -d $JETTY_BASE jetty ; 	gpgconf --kill all ; 	apt-mark auto '.*' > /dev/null ; 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null ; 	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false ; 	rm -rf /var/lib/apt/lists/* ; 	rm -rf /tmp/hsperfdata_root ; 	rm -fr $JETTY_HOME/jetty.tar.gz* ; 	rm -fr /jetty-keys $GNUPGHOME ; 	rm -rf /tmp/hsperfdata_root ; 	java -jar "$JETTY_HOME/start.jar" --list-config ;
+# Wed, 05 Jun 2024 08:33:39 GMT
+WORKDIR /var/lib/jetty
+# Wed, 05 Jun 2024 08:33:39 GMT
+COPY multi:6bf6ffc2c0ff756d51254f4ec987e84575c16c895c328c42a63bde92f8d5278a in / 
+# Wed, 05 Jun 2024 08:33:39 GMT
+USER jetty
+# Wed, 05 Jun 2024 08:33:40 GMT
+EXPOSE 8080
+# Wed, 05 Jun 2024 08:33:40 GMT
+ENTRYPOINT ["/docker-entrypoint.sh"]
+# Wed, 05 Jun 2024 08:33:40 GMT
+CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
+# Wed, 05 Jun 2024 12:07:16 GMT
+ENV DATA_DIR=/catalogue-data
+# Wed, 05 Jun 2024 12:07:16 GMT
+ENV JAVA_OPTS=-Dorg.eclipse.jetty.annotations.AnnotationParser.LEVEL=OFF         -Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true         -Xms512M -Xss512M -Xmx2G -XX:+UseConcMarkSweepGC         -Dgeonetwork.resources.dir=/catalogue-data/resources         -Dgeonetwork.data.dir=/catalogue-data         -Dgeonetwork.codeList.dir=/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/codelist         -Dgeonetwork.schema.dir=/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins
+# Wed, 05 Jun 2024 12:07:16 GMT
+USER root
+# Wed, 05 Jun 2024 12:07:21 GMT
+RUN apt-get -y update &&     apt-get -y install --no-install-recommends         curl         unzip &&     rm -rf /var/lib/apt/lists/* &&     mkdir -p ${DATA_DIR} &&     chown -R jetty:jetty ${DATA_DIR} &&     mkdir -p /var/lib/jetty/webapps/geonetwork &&     chown -R jetty:jetty /var/lib/jetty/webapps/geonetwork
+# Wed, 05 Jun 2024 12:07:21 GMT
+USER jetty
+# Wed, 05 Jun 2024 12:07:21 GMT
+ENV GN_FILE=geonetwork.war
+# Tue, 18 Jun 2024 18:20:18 GMT
+ENV GN_VERSION=4.2.10
+# Tue, 18 Jun 2024 18:20:18 GMT
+ENV GN_DOWNLOAD_MD5=0f33998c61e7cf74de6bb5e451a571b3
+# Tue, 18 Jun 2024 18:20:37 GMT
+RUN cd /var/lib/jetty/webapps/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
+# Tue, 18 Jun 2024 18:20:38 GMT
+COPY file:ee50548f90174fcbec925e62c4a2db15e8eb83e581b0f78e369d30fd096dcd23 in /geonetwork-entrypoint.sh 
+# Tue, 18 Jun 2024 18:20:38 GMT
+ENTRYPOINT ["/geonetwork-entrypoint.sh"]
+# Tue, 18 Jun 2024 18:20:38 GMT
+CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
+# Tue, 18 Jun 2024 18:20:38 GMT
+VOLUME [/catalogue-data]
+```
+
+-	Layers:
+	-	`sha256:560c024910bebac6b404791af28ebd48a8289303b8377d17b67ffdfe52754f2a`  
+		Last Modified: Mon, 03 Jun 2024 18:06:06 GMT  
+		Size: 28.6 MB (28584223 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:b3ef1f9e9d220aa4c081924e26f514bbafee5fecb9cb7f8e3b5b19762ce947fa`  
+		Last Modified: Wed, 05 Jun 2024 04:57:49 GMT  
+		Size: 16.9 MB (16920774 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:86c361d921973a199295dea7b1a08340c6444ee42f6b23b2e924aa5100420f67`  
+		Last Modified: Wed, 05 Jun 2024 04:57:54 GMT  
+		Size: 103.6 MB (103602581 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:409c91c0433db39de61b0193a2498b60890893ce6b3cb2b9e1c751bfdc919224`  
+		Last Modified: Wed, 05 Jun 2024 04:57:46 GMT  
+		Size: 128.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:57bd20a24d30f10019507281b17336eb76b4dd341fcbca56686e570a18717dda`  
+		Last Modified: Wed, 05 Jun 2024 04:57:46 GMT  
+		Size: 734.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:da0d6dcd7d25ac633765086bba7c98d878169ac8b6a2048599f039aaafa261a6`  
+		Last Modified: Wed, 05 Jun 2024 08:52:11 GMT  
+		Size: 10.3 MB (10253850 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:98553e59a267272372e04ccb00fad1780599befe6e31c82f0bc346cb204455a5`  
+		Last Modified: Wed, 05 Jun 2024 08:52:10 GMT  
+		Size: 1.6 KB (1633 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:a7593d96722e5b2bb3846bf2c6acac051b5e94d58c4d624264015e6a159a2961`  
+		Last Modified: Wed, 05 Jun 2024 12:10:03 GMT  
+		Size: 482.9 KB (482942 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:c621893622f46914715e2c879d2afcca8c12da7190fa21d79403a7c5c926c2a6`  
+		Last Modified: Tue, 18 Jun 2024 18:22:24 GMT  
+		Size: 301.9 MB (301932770 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:3f5443376a6b5c5bc8b786b885dc3f9852d57cad8b8c49d89c4e559dda2318ae`  
+		Last Modified: Tue, 18 Jun 2024 18:22:08 GMT  
+		Size: 967.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+
+### `geonetwork:4.2.10` - linux; arm64 variant v8
+
+```console
+$ docker pull geonetwork@sha256:7160bd7694a44ffc2318c5a6ced73cddc2a1eb6bcbe102d18c362a1d27f1513d
+```
+
+-	Docker Version: 23.0.11
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
+-	Total Size: **459.4 MB (459358062 bytes)**  
+	(compressed transfer size, not on-disk size)
+-	Image ID: `sha256:1588c5a23d7e096d0bbbdb4304c5210097aefc141f597fcc3ef8a8a799ea79e0`
+-	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
+-	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
+
+```dockerfile
+# Mon, 03 Jun 2024 16:52:57 GMT
+ARG RELEASE
+# Mon, 03 Jun 2024 16:52:57 GMT
+ARG LAUNCHPAD_BUILD_ARCH
+# Mon, 03 Jun 2024 16:52:57 GMT
+LABEL org.opencontainers.image.ref.name=ubuntu
+# Mon, 03 Jun 2024 16:52:57 GMT
+LABEL org.opencontainers.image.version=20.04
+# Mon, 03 Jun 2024 16:52:59 GMT
+ADD file:6d8cc056ee741f09a6c7d965d8e2027d80ed2eccbfb0312593ce52d9256db437 in / 
+# Mon, 03 Jun 2024 16:52:59 GMT
+CMD ["/bin/bash"]
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENV JAVA_HOME=/opt/java/openjdk
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENV PATH=/opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENV LANG=en_US.UTF-8 LANGUAGE=en_US:en LC_ALL=en_US.UTF-8
+# Tue, 23 Apr 2024 20:51:38 GMT
+RUN set -eux;     apt-get update;     DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends         curl         wget         fontconfig         ca-certificates p11-kit         tzdata         locales     ;     echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen;     locale-gen en_US.UTF-8;     rm -rf /var/lib/apt/lists/* # buildkit
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENV JAVA_VERSION=jdk8u412-b08
+# Tue, 23 Apr 2024 20:51:38 GMT
+RUN set -eux;     ARCH="$(dpkg --print-architecture)";     case "${ARCH}" in        aarch64|arm64)          ESUM='3504d748a93f23cac8c060bd33231bd51e90dcb620f38dadc6239b6cd2a5011c';          BINARY_URL='https://github.com/adoptium/temurin8-binaries/releases/download/jdk8u412-b08/OpenJDK8U-jdk_aarch64_linux_hotspot_8u412b08.tar.gz';          ;;        amd64|i386:x86-64)          ESUM='b9884a96f78543276a6399c3eb8c2fd8a80e6b432ea50e87d3d12d495d1d2808';          BINARY_URL='https://github.com/adoptium/temurin8-binaries/releases/download/jdk8u412-b08/OpenJDK8U-jdk_x64_linux_hotspot_8u412b08.tar.gz';          ;;        armhf|arm)          ESUM='be4aff6fa7bf6515f16f93dcaf9fdc61853fe1ef0d25b08a1bb1cf6e3d047391';          BINARY_URL='https://github.com/adoptium/temurin8-binaries/releases/download/jdk8u412-b08/OpenJDK8U-jdk_arm_linux_hotspot_8u412b08.tar.gz';          apt-get update;          DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends libatomic1;          rm -rf /var/lib/apt/lists/*;          ;;        ppc64el|powerpc:common64)          ESUM='6b7ed7996788075e182dd33349288346240fbce540e50fd77aecfc309a5ada19';          BINARY_URL='https://github.com/adoptium/temurin8-binaries/releases/download/jdk8u412-b08/OpenJDK8U-jdk_ppc64le_linux_hotspot_8u412b08.tar.gz';          ;;        *)          echo "Unsupported arch: ${ARCH}";          exit 1;          ;;     esac;     wget --progress=dot:giga -O /tmp/openjdk.tar.gz ${BINARY_URL};     echo "${ESUM} */tmp/openjdk.tar.gz" | sha256sum -c -;     mkdir -p "$JAVA_HOME";     tar --extract         --file /tmp/openjdk.tar.gz         --directory "$JAVA_HOME"         --strip-components 1         --no-same-owner     ;     rm -f /tmp/openjdk.tar.gz ${JAVA_HOME}/lib/src.zip;     find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf;     ldconfig; # buildkit
+# Tue, 23 Apr 2024 20:51:38 GMT
+RUN set -eux;     echo "Verifying install ...";     echo "javac -version"; javac -version;     echo "java -version"; java -version;     echo "Complete." # buildkit
+# Tue, 23 Apr 2024 20:51:38 GMT
+COPY entrypoint.sh /__cacert_entrypoint.sh # buildkit
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENTRYPOINT ["/__cacert_entrypoint.sh"]
+# Wed, 05 Jun 2024 07:42:38 GMT
+ENV JETTY_VERSION=9.4.54.v20240208
+# Wed, 05 Jun 2024 07:42:38 GMT
+ENV JETTY_HOME=/usr/local/jetty
+# Wed, 05 Jun 2024 07:42:38 GMT
+ENV JETTY_BASE=/var/lib/jetty
+# Wed, 05 Jun 2024 07:42:39 GMT
+ENV TMPDIR=/tmp/jetty
+# Wed, 05 Jun 2024 07:42:39 GMT
+ENV PATH=/usr/local/jetty/bin:/opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Wed, 05 Jun 2024 07:42:39 GMT
+ENV JETTY_TGZ_URL=https://repo1.maven.org/maven2/org/eclipse/jetty/jetty-home/9.4.54.v20240208/jetty-home-9.4.54.v20240208.tar.gz
+# Wed, 05 Jun 2024 07:42:39 GMT
+ENV JETTY_GPG_KEYS=AED5EE6C45D0FE8D5D1B164F27DED4BF6216DB8F 	2A684B57436A81FA8706B53C61C3351A438A3B7D 	5989BAF76217B843D66BE55B2D0E1FB8FE4B68B4 	B59B67FD7904984367F931800818D9D68FB67BAC 	BFBB21C246D7776836287A48A04E0C74ABB35FEA 	8B096546B1A8F02656B15D3B1677D141BCF3584D 	F254B35617DC255D9344BCFA873A8E86B4372146 	E22488CC94F63E3FC928536C4241C08270D999C3
+# Wed, 05 Jun 2024 07:43:26 GMT
+RUN set -xe ; 	export savedAptMark="$(apt-mark showmanual)" ; 	mkdir -p $TMPDIR ; 	apt-get update ; 	apt-get install -y --no-install-recommends 		ca-certificates 		p11-kit 		gnupg2 		curl 		; 	export GNUPGHOME=/jetty-keys ; 	mkdir -p "$GNUPGHOME" ; 	for key in $JETTY_GPG_KEYS; do 		gpg --batch --keyserver "hkps://keyserver.ubuntu.com" --recv-keys "$key"; 	done ; 	mkdir -p "$JETTY_HOME" ; 	cd $JETTY_HOME ; 	curl -SL "$JETTY_TGZ_URL" -o jetty.tar.gz ; 	curl -SL "$JETTY_TGZ_URL.asc" -o jetty.tar.gz.asc ; 	gpg --batch --verify jetty.tar.gz.asc jetty.tar.gz ; 	tar -xvf jetty.tar.gz --strip-components=1 ; 	sed -i '/jetty-logging/d' etc/jetty.conf ; 	mkdir -p "$JETTY_BASE" ; 	cd $JETTY_BASE ; 	case "$JETTY_VERSION" in 		"12."*) START_MODULES="server,http,ext,resources" ;; 		*) START_MODULES="server,http,deploy,ext,resources,jsp,jstl,websocket" ;; 	esac ; 	java -jar "$JETTY_HOME/start.jar" --create-startd 		--add-to-start="$START_MODULES" ; 	groupadd -r jetty && useradd -r -g jetty jetty ; 	chown -R jetty:jetty "$JETTY_HOME" "$JETTY_BASE" "$TMPDIR" ; 	usermod -d $JETTY_BASE jetty ; 	gpgconf --kill all ; 	apt-mark auto '.*' > /dev/null ; 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null ; 	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false ; 	rm -rf /var/lib/apt/lists/* ; 	rm -rf /tmp/hsperfdata_root ; 	rm -fr $JETTY_HOME/jetty.tar.gz* ; 	rm -fr /jetty-keys $GNUPGHOME ; 	rm -rf /tmp/hsperfdata_root ; 	java -jar "$JETTY_HOME/start.jar" --list-config ;
+# Wed, 05 Jun 2024 07:43:26 GMT
+WORKDIR /var/lib/jetty
+# Wed, 05 Jun 2024 07:43:26 GMT
+COPY multi:6bf6ffc2c0ff756d51254f4ec987e84575c16c895c328c42a63bde92f8d5278a in / 
+# Wed, 05 Jun 2024 07:43:26 GMT
+USER jetty
+# Wed, 05 Jun 2024 07:43:27 GMT
+EXPOSE 8080
+# Wed, 05 Jun 2024 07:43:27 GMT
+ENTRYPOINT ["/docker-entrypoint.sh"]
+# Wed, 05 Jun 2024 07:43:27 GMT
+CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
+# Wed, 05 Jun 2024 11:49:34 GMT
+ENV DATA_DIR=/catalogue-data
+# Wed, 05 Jun 2024 11:49:34 GMT
+ENV JAVA_OPTS=-Dorg.eclipse.jetty.annotations.AnnotationParser.LEVEL=OFF         -Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true         -Xms512M -Xss512M -Xmx2G -XX:+UseConcMarkSweepGC         -Dgeonetwork.resources.dir=/catalogue-data/resources         -Dgeonetwork.data.dir=/catalogue-data         -Dgeonetwork.codeList.dir=/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/codelist         -Dgeonetwork.schema.dir=/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins
+# Wed, 05 Jun 2024 11:49:34 GMT
+USER root
+# Wed, 05 Jun 2024 11:49:37 GMT
+RUN apt-get -y update &&     apt-get -y install --no-install-recommends         curl         unzip &&     rm -rf /var/lib/apt/lists/* &&     mkdir -p ${DATA_DIR} &&     chown -R jetty:jetty ${DATA_DIR} &&     mkdir -p /var/lib/jetty/webapps/geonetwork &&     chown -R jetty:jetty /var/lib/jetty/webapps/geonetwork
+# Wed, 05 Jun 2024 11:49:37 GMT
+USER jetty
+# Wed, 05 Jun 2024 11:49:38 GMT
+ENV GN_FILE=geonetwork.war
+# Tue, 18 Jun 2024 18:39:36 GMT
+ENV GN_VERSION=4.2.10
+# Tue, 18 Jun 2024 18:39:36 GMT
+ENV GN_DOWNLOAD_MD5=0f33998c61e7cf74de6bb5e451a571b3
+# Tue, 18 Jun 2024 18:40:43 GMT
+RUN cd /var/lib/jetty/webapps/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
+# Tue, 18 Jun 2024 18:40:45 GMT
+COPY file:ee50548f90174fcbec925e62c4a2db15e8eb83e581b0f78e369d30fd096dcd23 in /geonetwork-entrypoint.sh 
+# Tue, 18 Jun 2024 18:40:45 GMT
+ENTRYPOINT ["/geonetwork-entrypoint.sh"]
+# Tue, 18 Jun 2024 18:40:45 GMT
+CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
+# Tue, 18 Jun 2024 18:40:46 GMT
+VOLUME [/catalogue-data]
+```
+
+-	Layers:
+	-	`sha256:8cddf7b9c8a772efac198a7ae8bdfe15df2e065bb85f15cb8a223f6b3a2dbf9c`  
+		Last Modified: Tue, 04 Jun 2024 16:08:03 GMT  
+		Size: 27.2 MB (27205244 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:ba61bfb12e507d61800c2fe5399b1bfd7ee7b2982cfef183447f0d34efdae73e`  
+		Last Modified: Wed, 05 Jun 2024 04:54:46 GMT  
+		Size: 16.8 MB (16776981 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:dadd77454831bce505039d08a5c372d808b3443f601c4557f162af530201df18`  
+		Last Modified: Wed, 05 Jun 2024 04:54:50 GMT  
+		Size: 102.7 MB (102704998 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:d137067f35ba71b6314ae47cc286089738597349af237e5d830e37f641fa16af`  
+		Last Modified: Wed, 05 Jun 2024 04:54:44 GMT  
+		Size: 128.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:d2f6368d49af04d54ffec7f6dbbf4aa20deacf4710ff44c614be17af4762a154`  
+		Last Modified: Wed, 05 Jun 2024 04:54:44 GMT  
+		Size: 734.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:2dca25e7d296dbdea3ffcea8e0b6583f572aeb4de461685b548fb10812471190`  
+		Last Modified: Wed, 05 Jun 2024 07:56:54 GMT  
+		Size: 10.3 MB (10253672 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:7c3a1fcaf90efd0cb012f7abcf42ae274ee3a3eae1f0f3c48d0ad459b042f5cb`  
+		Last Modified: Wed, 05 Jun 2024 07:56:53 GMT  
+		Size: 1.6 KB (1633 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:dc8f0b8079f7297bd1a288cefe3b4bca3275c53102f038dd3fab72aaf3878605`  
+		Last Modified: Wed, 05 Jun 2024 11:53:04 GMT  
+		Size: 481.0 KB (481014 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:51ca639197055891fb102e747e0a4a56f5ee5e9f448f1cead30373665698de88`  
+		Last Modified: Tue, 18 Jun 2024 18:42:34 GMT  
+		Size: 301.9 MB (301932691 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:5b9d8d8fd550834fa4f45bf47a65eaa711070819d89d03453e0e6a7e5bef5aaa`  
+		Last Modified: Tue, 18 Jun 2024 18:42:20 GMT  
+		Size: 967.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:4.4`
 
 ```console
-$ docker pull geonetwork@sha256:6e9c63891cb00d6b93ab56e4d569f315f3968aa34e90b1ac5105d9f36696d654
+$ docker pull geonetwork@sha256:1befaf9030e6f82af9af3954c7445b6da9fc83673339f420e7f4c1c8148009e3
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -4466,14 +4754,14 @@ $ docker pull geonetwork@sha256:6e9c63891cb00d6b93ab56e4d569f315f3968aa34e90b1ac
 ### `geonetwork:4.4` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:f0dd1560ff0aab8ab4a2a3d41794ff8dd0de4e74eabd79478801c4eaecc2a88c
+$ docker pull geonetwork@sha256:27c06f5fd954964eea4ce207c1e76c47d55d75541e11d33d27805cbdda29cfe2
 ```
 
 -	Docker Version: 23.0.11
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **488.3 MB (488318911 bytes)**  
+-	Total Size: **488.5 MB (488518480 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:4ee9da836586bfed6a56f4957e61ce2fc970122d55fa0134209a4e9190d613fa`
+-	Image ID: `sha256:75c52a94cb99579e362fe9554483607ab8e7097ddc24710c387597d51434350d`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -4554,23 +4842,23 @@ RUN apt-get -y update &&     apt-get -y install --no-install-recommends         
 USER jetty
 # Wed, 05 Jun 2024 12:08:46 GMT
 ENV GN_FILE=geonetwork.war
-# Wed, 05 Jun 2024 12:08:46 GMT
-ENV GN_VERSION=4.4.4
-# Wed, 05 Jun 2024 12:08:46 GMT
-ENV GN_DOWNLOAD_MD5=f2cd38d91dc0db4a126d0573b97e9103
-# Wed, 05 Jun 2024 12:09:03 GMT
+# Tue, 18 Jun 2024 18:20:42 GMT
+ENV GN_VERSION=4.4.5
+# Tue, 18 Jun 2024 18:20:42 GMT
+ENV GN_DOWNLOAD_MD5=a7b04339041e1e8217435dc6273ac3b8
+# Tue, 18 Jun 2024 18:21:47 GMT
 RUN cd /opt/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
-# Wed, 05 Jun 2024 12:09:05 GMT
+# Tue, 18 Jun 2024 18:21:48 GMT
 COPY file:996df24c69b17d351426a6c0c0dfb153f784c21af81ae4ec36afa187063e1eda in /usr/local/share/geonetwork/geonetwork_context_template.xml 
-# Wed, 05 Jun 2024 12:09:05 GMT
+# Tue, 18 Jun 2024 18:21:48 GMT
 COPY file:d79abcd242af427d06aee0b458cf9b6d258c1203248aa30f6246fc26f5727df3 in /geonetwork-entrypoint.sh 
-# Wed, 05 Jun 2024 12:09:06 GMT
+# Tue, 18 Jun 2024 18:21:49 GMT
 RUN java -jar /usr/local/jetty/start.jar --create-startd --add-module=http-forwarded
-# Wed, 05 Jun 2024 12:09:06 GMT
+# Tue, 18 Jun 2024 18:21:49 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Wed, 05 Jun 2024 12:09:06 GMT
+# Tue, 18 Jun 2024 18:21:49 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Wed, 05 Jun 2024 12:09:06 GMT
+# Tue, 18 Jun 2024 18:21:49 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -4607,34 +4895,34 @@ VOLUME [/catalogue-data]
 		Last Modified: Wed, 05 Jun 2024 12:10:27 GMT  
 		Size: 482.9 KB (482890 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:f3ebfaf2a536c282a90b9383dd1992f000aba45ef83a233a5caccf7cec786762`  
-		Last Modified: Wed, 05 Jun 2024 12:10:42 GMT  
-		Size: 286.6 MB (286564505 bytes)  
+	-	`sha256:140ad982f30c6ce6baee6b173449d3e377c89e20c7eb53cce1214ac2501360ad`  
+		Last Modified: Tue, 18 Jun 2024 18:22:48 GMT  
+		Size: 286.8 MB (286764073 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:0213d87abe79afa7f71f88141f457f64254038ee2ec4160ac35af7f8e3dd740c`  
-		Last Modified: Wed, 05 Jun 2024 12:10:27 GMT  
-		Size: 553.0 B  
+	-	`sha256:c157c6b21e78c72dec84efad45d7cd2b5ee9d3f39b3c285f2963041209051672`  
+		Last Modified: Tue, 18 Jun 2024 18:22:33 GMT  
+		Size: 555.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:d84f6ebc7af02915d8347c354da3ff3a79f23492d0f11e6e4fe5fb3f65a4c6a2`  
-		Last Modified: Wed, 05 Jun 2024 12:10:27 GMT  
+	-	`sha256:26855f3b3976044458252213fbf1fb97b016b6e841d9f0bd3421ced2ed0f31c8`  
+		Last Modified: Tue, 18 Jun 2024 18:22:33 GMT  
 		Size: 567.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:dad531c8148cce7f787ea54eff41a18940b0474cbdeef460b8f1a1d8c456d811`  
-		Last Modified: Wed, 05 Jun 2024 12:10:27 GMT  
-		Size: 139.0 B  
+	-	`sha256:fdf2140b15cb8c54af240fa037179e59ee21a169527295846fca049b1a603fb9`  
+		Last Modified: Tue, 18 Jun 2024 18:22:33 GMT  
+		Size: 138.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ### `geonetwork:4.4` - linux; arm64 variant v8
 
 ```console
-$ docker pull geonetwork@sha256:f1bdd80a13fd17655895ac0ba3d821e6c45ccc5976e0295bf280135bc19f7bb8
+$ docker pull geonetwork@sha256:bbc95f789209cffa361bcc3b04d26ebdf568818d3fc762df2b201f1b2292f947
 ```
 
 -	Docker Version: 23.0.11
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **483.6 MB (483598643 bytes)**  
+-	Total Size: **483.8 MB (483798156 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:c76e6145d6a751d038b2fa31da0bbc8e19017dd085255c31068b57e9a0e27487`
+-	Image ID: `sha256:026e88f963e2339602be8553e3386b8e6d20746f8843a6f95a621266bd7ec0b7`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -4715,23 +5003,23 @@ RUN apt-get -y update &&     apt-get -y install --no-install-recommends         
 USER jetty
 # Wed, 05 Jun 2024 11:51:01 GMT
 ENV GN_FILE=geonetwork.war
-# Wed, 05 Jun 2024 11:51:01 GMT
-ENV GN_VERSION=4.4.4
-# Wed, 05 Jun 2024 11:51:01 GMT
-ENV GN_DOWNLOAD_MD5=f2cd38d91dc0db4a126d0573b97e9103
-# Wed, 05 Jun 2024 11:52:04 GMT
+# Tue, 18 Jun 2024 18:40:59 GMT
+ENV GN_VERSION=4.4.5
+# Tue, 18 Jun 2024 18:40:59 GMT
+ENV GN_DOWNLOAD_MD5=a7b04339041e1e8217435dc6273ac3b8
+# Tue, 18 Jun 2024 18:42:02 GMT
 RUN cd /opt/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
-# Wed, 05 Jun 2024 11:52:07 GMT
+# Tue, 18 Jun 2024 18:42:04 GMT
 COPY file:996df24c69b17d351426a6c0c0dfb153f784c21af81ae4ec36afa187063e1eda in /usr/local/share/geonetwork/geonetwork_context_template.xml 
-# Wed, 05 Jun 2024 11:52:07 GMT
+# Tue, 18 Jun 2024 18:42:05 GMT
 COPY file:d79abcd242af427d06aee0b458cf9b6d258c1203248aa30f6246fc26f5727df3 in /geonetwork-entrypoint.sh 
-# Wed, 05 Jun 2024 11:52:08 GMT
+# Tue, 18 Jun 2024 18:42:06 GMT
 RUN java -jar /usr/local/jetty/start.jar --create-startd --add-module=http-forwarded
-# Wed, 05 Jun 2024 11:52:08 GMT
+# Tue, 18 Jun 2024 18:42:06 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Wed, 05 Jun 2024 11:52:08 GMT
+# Tue, 18 Jun 2024 18:42:06 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Wed, 05 Jun 2024 11:52:08 GMT
+# Tue, 18 Jun 2024 18:42:06 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -4768,36 +5056,360 @@ VOLUME [/catalogue-data]
 		Last Modified: Wed, 05 Jun 2024 11:53:25 GMT  
 		Size: 480.9 KB (480915 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:43834d290f9c5212ccdfc87b31556dff7b59f3179ae94c0c297b56e330e8f4b7`  
-		Last Modified: Wed, 05 Jun 2024 11:53:37 GMT  
-		Size: 286.6 MB (286564537 bytes)  
+	-	`sha256:af38ddd741aa09f14d2c2e775b86641ecbf348009db7ed439373c49e2728496e`  
+		Last Modified: Tue, 18 Jun 2024 18:42:56 GMT  
+		Size: 286.8 MB (286764051 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:9c058a84bf5bfe5a32dfc15ccee8e5d69e8395b55582cd723beeda27152febb3`  
-		Last Modified: Wed, 05 Jun 2024 11:53:25 GMT  
-		Size: 555.0 B  
+	-	`sha256:ed405195021f3c5fb1ab2726b8c96ea11d181971f2ade316000a101490ff7b57`  
+		Last Modified: Tue, 18 Jun 2024 18:42:44 GMT  
+		Size: 554.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:a0ff7acfca8cdf6827d8c48b38dc27f0ced40718bbb88280e345c2464e96ac33`  
-		Last Modified: Wed, 05 Jun 2024 11:53:25 GMT  
-		Size: 569.0 B  
+	-	`sha256:0d0756bff4e0d48056e6b2f7b883be5fbc469ebb0cc32589bdda92d3ade2671e`  
+		Last Modified: Tue, 18 Jun 2024 18:42:43 GMT  
+		Size: 568.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:2dc63bcea23bb796ad83ea65b74efc2c84f6878395d6732ae211f80e31e79d50`  
-		Last Modified: Wed, 05 Jun 2024 11:53:25 GMT  
-		Size: 137.0 B  
+	-	`sha256:cacf6862df07fdf3900b5bbed12df478f3da6ca611db88928951d641631ba2fa`  
+		Last Modified: Tue, 18 Jun 2024 18:42:43 GMT  
+		Size: 138.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:4.4.5`
 
 ```console
-$ docker pull geonetwork@sha256:eb37f58646a901dc7727cf448cae36daaefaba79de33b5058dab79aa4c04aefb
+$ docker pull geonetwork@sha256:1befaf9030e6f82af9af3954c7445b6da9fc83673339f420e7f4c1c8148009e3
 ```
 
--	Manifest MIME: `application/vnd.oci.image.index.v1+json`
--	Platforms: 0
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
+-	Platforms: 2
+	-	linux; amd64
+	-	linux; arm64 variant v8
+
+### `geonetwork:4.4.5` - linux; amd64
+
+```console
+$ docker pull geonetwork@sha256:27c06f5fd954964eea4ce207c1e76c47d55d75541e11d33d27805cbdda29cfe2
+```
+
+-	Docker Version: 23.0.11
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
+-	Total Size: **488.5 MB (488518480 bytes)**  
+	(compressed transfer size, not on-disk size)
+-	Image ID: `sha256:75c52a94cb99579e362fe9554483607ab8e7097ddc24710c387597d51434350d`
+-	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
+-	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
+
+```dockerfile
+# Mon, 03 Jun 2024 17:10:41 GMT
+ARG RELEASE
+# Mon, 03 Jun 2024 17:10:41 GMT
+ARG LAUNCHPAD_BUILD_ARCH
+# Mon, 03 Jun 2024 17:10:41 GMT
+LABEL org.opencontainers.image.ref.name=ubuntu
+# Mon, 03 Jun 2024 17:10:41 GMT
+LABEL org.opencontainers.image.version=20.04
+# Mon, 03 Jun 2024 17:10:43 GMT
+ADD file:e7cff353f027ecf0a2cb1cdd51714de3b083a11a0d965f104489f9a7e6925056 in / 
+# Mon, 03 Jun 2024 17:10:43 GMT
+CMD ["/bin/bash"]
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENV JAVA_HOME=/opt/java/openjdk
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENV PATH=/opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENV LANG=en_US.UTF-8 LANGUAGE=en_US:en LC_ALL=en_US.UTF-8
+# Tue, 23 Apr 2024 20:51:38 GMT
+RUN set -eux;     apt-get update;     DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends         curl         wget         fontconfig         ca-certificates p11-kit         tzdata         locales     ;     echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen;     locale-gen en_US.UTF-8;     rm -rf /var/lib/apt/lists/* # buildkit
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENV JAVA_VERSION=jdk-11.0.23+9
+# Tue, 23 Apr 2024 20:51:38 GMT
+RUN set -eux;     ARCH="$(dpkg --print-architecture)";     case "${ARCH}" in        aarch64|arm64)          ESUM='e00476a7be3c4adfa9b3d55d30768967fd246a8352e518894e183fa444d4d3ce';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.23%2B9/OpenJDK11U-jdk_aarch64_linux_hotspot_11.0.23_9.tar.gz';          ;;        amd64|i386:x86-64)          ESUM='23e47ea7a3015be3240f21185fd902adebdcf76530757c9b482c7eb5bd3417c2';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.23%2B9/OpenJDK11U-jdk_x64_linux_hotspot_11.0.23_9.tar.gz';          ;;        armhf|arm)          ESUM='8077edc07a57d846c3d11286a7caf05ed6ca6d6c1234bf0e03611f18e187f075';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.23%2B9/OpenJDK11U-jdk_arm_linux_hotspot_11.0.23_9.tar.gz';          ;;        ppc64el|powerpc:common64)          ESUM='f56068bb64c6bf858894f75c2bc261f54db32932422eb07527f36ae40046e9a0';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.23%2B9/OpenJDK11U-jdk_ppc64le_linux_hotspot_11.0.23_9.tar.gz';          ;;        s390x|s390:64-bit)          ESUM='cf06c3e41acfaeda77112ac04f5a711cafe9fa9ac04dff758696fe7e8d66a0ea';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.23%2B9/OpenJDK11U-jdk_s390x_linux_hotspot_11.0.23_9.tar.gz';          ;;        *)          echo "Unsupported arch: ${ARCH}";          exit 1;          ;;     esac;     wget --progress=dot:giga -O /tmp/openjdk.tar.gz ${BINARY_URL};     echo "${ESUM} */tmp/openjdk.tar.gz" | sha256sum -c -;     mkdir -p "$JAVA_HOME";     tar --extract         --file /tmp/openjdk.tar.gz         --directory "$JAVA_HOME"         --strip-components 1         --no-same-owner     ;     rm -f /tmp/openjdk.tar.gz ${JAVA_HOME}/lib/src.zip;     find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf;     ldconfig;     java -Xshare:dump; # buildkit
+# Tue, 23 Apr 2024 20:51:38 GMT
+RUN set -eux;     echo "Verifying install ...";     fileEncoding="$(echo 'System.out.println(System.getProperty("file.encoding"))' | jshell -s -)"; [ "$fileEncoding" = 'UTF-8' ]; rm -rf ~/.java;     echo "javac --version"; javac --version;     echo "java --version"; java --version;     echo "Complete." # buildkit
+# Tue, 23 Apr 2024 20:51:38 GMT
+COPY entrypoint.sh /__cacert_entrypoint.sh # buildkit
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENTRYPOINT ["/__cacert_entrypoint.sh"]
+# Tue, 23 Apr 2024 20:51:38 GMT
+CMD ["jshell"]
+# Wed, 05 Jun 2024 08:34:46 GMT
+ENV JETTY_VERSION=9.4.54.v20240208
+# Wed, 05 Jun 2024 08:34:46 GMT
+ENV JETTY_HOME=/usr/local/jetty
+# Wed, 05 Jun 2024 08:34:46 GMT
+ENV JETTY_BASE=/var/lib/jetty
+# Wed, 05 Jun 2024 08:34:46 GMT
+ENV TMPDIR=/tmp/jetty
+# Wed, 05 Jun 2024 08:34:46 GMT
+ENV PATH=/usr/local/jetty/bin:/opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Wed, 05 Jun 2024 08:34:46 GMT
+ENV JETTY_TGZ_URL=https://repo1.maven.org/maven2/org/eclipse/jetty/jetty-home/9.4.54.v20240208/jetty-home-9.4.54.v20240208.tar.gz
+# Wed, 05 Jun 2024 08:34:47 GMT
+ENV JETTY_GPG_KEYS=AED5EE6C45D0FE8D5D1B164F27DED4BF6216DB8F 	2A684B57436A81FA8706B53C61C3351A438A3B7D 	5989BAF76217B843D66BE55B2D0E1FB8FE4B68B4 	B59B67FD7904984367F931800818D9D68FB67BAC 	BFBB21C246D7776836287A48A04E0C74ABB35FEA 	8B096546B1A8F02656B15D3B1677D141BCF3584D 	F254B35617DC255D9344BCFA873A8E86B4372146 	E22488CC94F63E3FC928536C4241C08270D999C3
+# Wed, 05 Jun 2024 08:35:07 GMT
+RUN set -xe ; 	export savedAptMark="$(apt-mark showmanual)" ; 	mkdir -p $TMPDIR ; 	apt-get update ; 	apt-get install -y --no-install-recommends 		ca-certificates 		p11-kit 		gnupg2 		curl 		; 	export GNUPGHOME=/jetty-keys ; 	mkdir -p "$GNUPGHOME" ; 	for key in $JETTY_GPG_KEYS; do 		gpg --batch --keyserver "hkps://keyserver.ubuntu.com" --recv-keys "$key"; 	done ; 	mkdir -p "$JETTY_HOME" ; 	cd $JETTY_HOME ; 	curl -SL "$JETTY_TGZ_URL" -o jetty.tar.gz ; 	curl -SL "$JETTY_TGZ_URL.asc" -o jetty.tar.gz.asc ; 	gpg --batch --verify jetty.tar.gz.asc jetty.tar.gz ; 	tar -xvf jetty.tar.gz --strip-components=1 ; 	sed -i '/jetty-logging/d' etc/jetty.conf ; 	mkdir -p "$JETTY_BASE" ; 	cd $JETTY_BASE ; 	case "$JETTY_VERSION" in 		"12."*) START_MODULES="server,http,ext,resources" ;; 		*) START_MODULES="server,http,deploy,ext,resources,jsp,jstl,websocket" ;; 	esac ; 	java -jar "$JETTY_HOME/start.jar" --create-startd 		--add-to-start="$START_MODULES" ; 	groupadd -r jetty && useradd -r -g jetty jetty ; 	chown -R jetty:jetty "$JETTY_HOME" "$JETTY_BASE" "$TMPDIR" ; 	usermod -d $JETTY_BASE jetty ; 	gpgconf --kill all ; 	apt-mark auto '.*' > /dev/null ; 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null ; 	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false ; 	rm -rf /var/lib/apt/lists/* ; 	rm -rf /tmp/hsperfdata_root ; 	rm -fr $JETTY_HOME/jetty.tar.gz* ; 	rm -fr /jetty-keys $GNUPGHOME ; 	rm -rf /tmp/hsperfdata_root ; 	java -jar "$JETTY_HOME/start.jar" --list-config ;
+# Wed, 05 Jun 2024 08:35:07 GMT
+WORKDIR /var/lib/jetty
+# Wed, 05 Jun 2024 08:35:07 GMT
+COPY multi:6bf6ffc2c0ff756d51254f4ec987e84575c16c895c328c42a63bde92f8d5278a in / 
+# Wed, 05 Jun 2024 08:35:07 GMT
+USER jetty
+# Wed, 05 Jun 2024 08:35:08 GMT
+EXPOSE 8080
+# Wed, 05 Jun 2024 08:35:08 GMT
+ENTRYPOINT ["/docker-entrypoint.sh"]
+# Wed, 05 Jun 2024 08:35:08 GMT
+CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
+# Wed, 05 Jun 2024 12:08:40 GMT
+ENV DATA_DIR=/catalogue-data
+# Wed, 05 Jun 2024 12:08:40 GMT
+ENV WEBAPP_CONTEXT_PATH=/geonetwork
+# Wed, 05 Jun 2024 12:08:40 GMT
+ENV GN_CONFIG_PROPERTIES=-Dgeonetwork.dir=/catalogue-data         -Dgeonetwork.formatter.dir=/catalogue-data/data/formatter         -Dgeonetwork.schema.dir=/opt/geonetwork/WEB-INF/data/config/schema_plugins         -Dgeonetwork.indexConfig.dir=/opt/geonetwork/WEB-INF/data/config/index
+# Wed, 05 Jun 2024 12:08:40 GMT
+ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true         -Xms512M -Xss512M -Xmx2G -XX:+UseConcMarkSweepGC
+# Wed, 05 Jun 2024 12:08:40 GMT
+USER root
+# Wed, 05 Jun 2024 12:08:46 GMT
+RUN apt-get -y update &&     apt-get -y install --no-install-recommends         curl         unzip &&     rm -rf /var/lib/apt/lists/* &&     mkdir -p ${DATA_DIR} &&     chown -R jetty:jetty ${DATA_DIR} &&     mkdir -p /opt/geonetwork &&     chown -R jetty:jetty /opt/geonetwork
+# Wed, 05 Jun 2024 12:08:46 GMT
+USER jetty
+# Wed, 05 Jun 2024 12:08:46 GMT
+ENV GN_FILE=geonetwork.war
+# Tue, 18 Jun 2024 18:20:42 GMT
+ENV GN_VERSION=4.4.5
+# Tue, 18 Jun 2024 18:20:42 GMT
+ENV GN_DOWNLOAD_MD5=a7b04339041e1e8217435dc6273ac3b8
+# Tue, 18 Jun 2024 18:21:47 GMT
+RUN cd /opt/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
+# Tue, 18 Jun 2024 18:21:48 GMT
+COPY file:996df24c69b17d351426a6c0c0dfb153f784c21af81ae4ec36afa187063e1eda in /usr/local/share/geonetwork/geonetwork_context_template.xml 
+# Tue, 18 Jun 2024 18:21:48 GMT
+COPY file:d79abcd242af427d06aee0b458cf9b6d258c1203248aa30f6246fc26f5727df3 in /geonetwork-entrypoint.sh 
+# Tue, 18 Jun 2024 18:21:49 GMT
+RUN java -jar /usr/local/jetty/start.jar --create-startd --add-module=http-forwarded
+# Tue, 18 Jun 2024 18:21:49 GMT
+ENTRYPOINT ["/geonetwork-entrypoint.sh"]
+# Tue, 18 Jun 2024 18:21:49 GMT
+CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
+# Tue, 18 Jun 2024 18:21:49 GMT
+VOLUME [/catalogue-data]
+```
+
+-	Layers:
+	-	`sha256:560c024910bebac6b404791af28ebd48a8289303b8377d17b67ffdfe52754f2a`  
+		Last Modified: Mon, 03 Jun 2024 18:06:06 GMT  
+		Size: 28.6 MB (28584223 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:b3ef1f9e9d220aa4c081924e26f514bbafee5fecb9cb7f8e3b5b19762ce947fa`  
+		Last Modified: Wed, 05 Jun 2024 04:57:49 GMT  
+		Size: 16.9 MB (16920774 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:24aeef90818f4bccf7d9bd6e0be8387a60d437936ced45ff5e61d80ef9778e94`  
+		Last Modified: Wed, 05 Jun 2024 04:59:06 GMT  
+		Size: 145.5 MB (145507603 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:0f0aa573dbf90a7e06817e01a23139b1f8b8093a2bb43b4050b665696d2aaaeb`  
+		Last Modified: Wed, 05 Jun 2024 04:58:55 GMT  
+		Size: 174.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:780a38247a5709082a621a5e1fbb5742e9b82f20b9235f8c349dbbcdd41e108a`  
+		Last Modified: Wed, 05 Jun 2024 04:58:54 GMT  
+		Size: 734.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:7a78cea7f7f57da8640dfe3c615ad5d7273e51c0d2b7abeb3c6907dbb24a7c9e`  
+		Last Modified: Wed, 05 Jun 2024 08:53:18 GMT  
+		Size: 10.3 MB (10255115 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:b0eb7ba51e077d8019c13653fa40bca1908b128c4d0e7e27a4da76b5a883b2c6`  
+		Last Modified: Wed, 05 Jun 2024 08:53:18 GMT  
+		Size: 1.6 KB (1634 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:470ecef1676b00c3cf757279c07e6184ea602528cf22f47a53e699069fcfc1a4`  
+		Last Modified: Wed, 05 Jun 2024 12:10:27 GMT  
+		Size: 482.9 KB (482890 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:140ad982f30c6ce6baee6b173449d3e377c89e20c7eb53cce1214ac2501360ad`  
+		Last Modified: Tue, 18 Jun 2024 18:22:48 GMT  
+		Size: 286.8 MB (286764073 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:c157c6b21e78c72dec84efad45d7cd2b5ee9d3f39b3c285f2963041209051672`  
+		Last Modified: Tue, 18 Jun 2024 18:22:33 GMT  
+		Size: 555.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:26855f3b3976044458252213fbf1fb97b016b6e841d9f0bd3421ced2ed0f31c8`  
+		Last Modified: Tue, 18 Jun 2024 18:22:33 GMT  
+		Size: 567.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:fdf2140b15cb8c54af240fa037179e59ee21a169527295846fca049b1a603fb9`  
+		Last Modified: Tue, 18 Jun 2024 18:22:33 GMT  
+		Size: 138.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+
+### `geonetwork:4.4.5` - linux; arm64 variant v8
+
+```console
+$ docker pull geonetwork@sha256:bbc95f789209cffa361bcc3b04d26ebdf568818d3fc762df2b201f1b2292f947
+```
+
+-	Docker Version: 23.0.11
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
+-	Total Size: **483.8 MB (483798156 bytes)**  
+	(compressed transfer size, not on-disk size)
+-	Image ID: `sha256:026e88f963e2339602be8553e3386b8e6d20746f8843a6f95a621266bd7ec0b7`
+-	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
+-	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
+
+```dockerfile
+# Mon, 03 Jun 2024 16:52:57 GMT
+ARG RELEASE
+# Mon, 03 Jun 2024 16:52:57 GMT
+ARG LAUNCHPAD_BUILD_ARCH
+# Mon, 03 Jun 2024 16:52:57 GMT
+LABEL org.opencontainers.image.ref.name=ubuntu
+# Mon, 03 Jun 2024 16:52:57 GMT
+LABEL org.opencontainers.image.version=20.04
+# Mon, 03 Jun 2024 16:52:59 GMT
+ADD file:6d8cc056ee741f09a6c7d965d8e2027d80ed2eccbfb0312593ce52d9256db437 in / 
+# Mon, 03 Jun 2024 16:52:59 GMT
+CMD ["/bin/bash"]
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENV JAVA_HOME=/opt/java/openjdk
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENV PATH=/opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENV LANG=en_US.UTF-8 LANGUAGE=en_US:en LC_ALL=en_US.UTF-8
+# Tue, 23 Apr 2024 20:51:38 GMT
+RUN set -eux;     apt-get update;     DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends         curl         wget         fontconfig         ca-certificates p11-kit         tzdata         locales     ;     echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen;     locale-gen en_US.UTF-8;     rm -rf /var/lib/apt/lists/* # buildkit
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENV JAVA_VERSION=jdk-11.0.23+9
+# Tue, 23 Apr 2024 20:51:38 GMT
+RUN set -eux;     ARCH="$(dpkg --print-architecture)";     case "${ARCH}" in        aarch64|arm64)          ESUM='e00476a7be3c4adfa9b3d55d30768967fd246a8352e518894e183fa444d4d3ce';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.23%2B9/OpenJDK11U-jdk_aarch64_linux_hotspot_11.0.23_9.tar.gz';          ;;        amd64|i386:x86-64)          ESUM='23e47ea7a3015be3240f21185fd902adebdcf76530757c9b482c7eb5bd3417c2';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.23%2B9/OpenJDK11U-jdk_x64_linux_hotspot_11.0.23_9.tar.gz';          ;;        armhf|arm)          ESUM='8077edc07a57d846c3d11286a7caf05ed6ca6d6c1234bf0e03611f18e187f075';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.23%2B9/OpenJDK11U-jdk_arm_linux_hotspot_11.0.23_9.tar.gz';          ;;        ppc64el|powerpc:common64)          ESUM='f56068bb64c6bf858894f75c2bc261f54db32932422eb07527f36ae40046e9a0';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.23%2B9/OpenJDK11U-jdk_ppc64le_linux_hotspot_11.0.23_9.tar.gz';          ;;        s390x|s390:64-bit)          ESUM='cf06c3e41acfaeda77112ac04f5a711cafe9fa9ac04dff758696fe7e8d66a0ea';          BINARY_URL='https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.23%2B9/OpenJDK11U-jdk_s390x_linux_hotspot_11.0.23_9.tar.gz';          ;;        *)          echo "Unsupported arch: ${ARCH}";          exit 1;          ;;     esac;     wget --progress=dot:giga -O /tmp/openjdk.tar.gz ${BINARY_URL};     echo "${ESUM} */tmp/openjdk.tar.gz" | sha256sum -c -;     mkdir -p "$JAVA_HOME";     tar --extract         --file /tmp/openjdk.tar.gz         --directory "$JAVA_HOME"         --strip-components 1         --no-same-owner     ;     rm -f /tmp/openjdk.tar.gz ${JAVA_HOME}/lib/src.zip;     find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf;     ldconfig;     java -Xshare:dump; # buildkit
+# Tue, 23 Apr 2024 20:51:38 GMT
+RUN set -eux;     echo "Verifying install ...";     fileEncoding="$(echo 'System.out.println(System.getProperty("file.encoding"))' | jshell -s -)"; [ "$fileEncoding" = 'UTF-8' ]; rm -rf ~/.java;     echo "javac --version"; javac --version;     echo "java --version"; java --version;     echo "Complete." # buildkit
+# Tue, 23 Apr 2024 20:51:38 GMT
+COPY entrypoint.sh /__cacert_entrypoint.sh # buildkit
+# Tue, 23 Apr 2024 20:51:38 GMT
+ENTRYPOINT ["/__cacert_entrypoint.sh"]
+# Tue, 23 Apr 2024 20:51:38 GMT
+CMD ["jshell"]
+# Wed, 05 Jun 2024 07:44:16 GMT
+ENV JETTY_VERSION=9.4.54.v20240208
+# Wed, 05 Jun 2024 07:44:16 GMT
+ENV JETTY_HOME=/usr/local/jetty
+# Wed, 05 Jun 2024 07:44:16 GMT
+ENV JETTY_BASE=/var/lib/jetty
+# Wed, 05 Jun 2024 07:44:16 GMT
+ENV TMPDIR=/tmp/jetty
+# Wed, 05 Jun 2024 07:44:16 GMT
+ENV PATH=/usr/local/jetty/bin:/opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Wed, 05 Jun 2024 07:44:16 GMT
+ENV JETTY_TGZ_URL=https://repo1.maven.org/maven2/org/eclipse/jetty/jetty-home/9.4.54.v20240208/jetty-home-9.4.54.v20240208.tar.gz
+# Wed, 05 Jun 2024 07:44:16 GMT
+ENV JETTY_GPG_KEYS=AED5EE6C45D0FE8D5D1B164F27DED4BF6216DB8F 	2A684B57436A81FA8706B53C61C3351A438A3B7D 	5989BAF76217B843D66BE55B2D0E1FB8FE4B68B4 	B59B67FD7904984367F931800818D9D68FB67BAC 	BFBB21C246D7776836287A48A04E0C74ABB35FEA 	8B096546B1A8F02656B15D3B1677D141BCF3584D 	F254B35617DC255D9344BCFA873A8E86B4372146 	E22488CC94F63E3FC928536C4241C08270D999C3
+# Wed, 05 Jun 2024 07:44:32 GMT
+RUN set -xe ; 	export savedAptMark="$(apt-mark showmanual)" ; 	mkdir -p $TMPDIR ; 	apt-get update ; 	apt-get install -y --no-install-recommends 		ca-certificates 		p11-kit 		gnupg2 		curl 		; 	export GNUPGHOME=/jetty-keys ; 	mkdir -p "$GNUPGHOME" ; 	for key in $JETTY_GPG_KEYS; do 		gpg --batch --keyserver "hkps://keyserver.ubuntu.com" --recv-keys "$key"; 	done ; 	mkdir -p "$JETTY_HOME" ; 	cd $JETTY_HOME ; 	curl -SL "$JETTY_TGZ_URL" -o jetty.tar.gz ; 	curl -SL "$JETTY_TGZ_URL.asc" -o jetty.tar.gz.asc ; 	gpg --batch --verify jetty.tar.gz.asc jetty.tar.gz ; 	tar -xvf jetty.tar.gz --strip-components=1 ; 	sed -i '/jetty-logging/d' etc/jetty.conf ; 	mkdir -p "$JETTY_BASE" ; 	cd $JETTY_BASE ; 	case "$JETTY_VERSION" in 		"12."*) START_MODULES="server,http,ext,resources" ;; 		*) START_MODULES="server,http,deploy,ext,resources,jsp,jstl,websocket" ;; 	esac ; 	java -jar "$JETTY_HOME/start.jar" --create-startd 		--add-to-start="$START_MODULES" ; 	groupadd -r jetty && useradd -r -g jetty jetty ; 	chown -R jetty:jetty "$JETTY_HOME" "$JETTY_BASE" "$TMPDIR" ; 	usermod -d $JETTY_BASE jetty ; 	gpgconf --kill all ; 	apt-mark auto '.*' > /dev/null ; 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null ; 	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false ; 	rm -rf /var/lib/apt/lists/* ; 	rm -rf /tmp/hsperfdata_root ; 	rm -fr $JETTY_HOME/jetty.tar.gz* ; 	rm -fr /jetty-keys $GNUPGHOME ; 	rm -rf /tmp/hsperfdata_root ; 	java -jar "$JETTY_HOME/start.jar" --list-config ;
+# Wed, 05 Jun 2024 07:44:32 GMT
+WORKDIR /var/lib/jetty
+# Wed, 05 Jun 2024 07:44:32 GMT
+COPY multi:6bf6ffc2c0ff756d51254f4ec987e84575c16c895c328c42a63bde92f8d5278a in / 
+# Wed, 05 Jun 2024 07:44:33 GMT
+USER jetty
+# Wed, 05 Jun 2024 07:44:33 GMT
+EXPOSE 8080
+# Wed, 05 Jun 2024 07:44:33 GMT
+ENTRYPOINT ["/docker-entrypoint.sh"]
+# Wed, 05 Jun 2024 07:44:33 GMT
+CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
+# Wed, 05 Jun 2024 11:50:57 GMT
+ENV DATA_DIR=/catalogue-data
+# Wed, 05 Jun 2024 11:50:57 GMT
+ENV WEBAPP_CONTEXT_PATH=/geonetwork
+# Wed, 05 Jun 2024 11:50:57 GMT
+ENV GN_CONFIG_PROPERTIES=-Dgeonetwork.dir=/catalogue-data         -Dgeonetwork.formatter.dir=/catalogue-data/data/formatter         -Dgeonetwork.schema.dir=/opt/geonetwork/WEB-INF/data/config/schema_plugins         -Dgeonetwork.indexConfig.dir=/opt/geonetwork/WEB-INF/data/config/index
+# Wed, 05 Jun 2024 11:50:57 GMT
+ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true         -Xms512M -Xss512M -Xmx2G -XX:+UseConcMarkSweepGC
+# Wed, 05 Jun 2024 11:50:57 GMT
+USER root
+# Wed, 05 Jun 2024 11:51:01 GMT
+RUN apt-get -y update &&     apt-get -y install --no-install-recommends         curl         unzip &&     rm -rf /var/lib/apt/lists/* &&     mkdir -p ${DATA_DIR} &&     chown -R jetty:jetty ${DATA_DIR} &&     mkdir -p /opt/geonetwork &&     chown -R jetty:jetty /opt/geonetwork
+# Wed, 05 Jun 2024 11:51:01 GMT
+USER jetty
+# Wed, 05 Jun 2024 11:51:01 GMT
+ENV GN_FILE=geonetwork.war
+# Tue, 18 Jun 2024 18:40:59 GMT
+ENV GN_VERSION=4.4.5
+# Tue, 18 Jun 2024 18:40:59 GMT
+ENV GN_DOWNLOAD_MD5=a7b04339041e1e8217435dc6273ac3b8
+# Tue, 18 Jun 2024 18:42:02 GMT
+RUN cd /opt/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
+# Tue, 18 Jun 2024 18:42:04 GMT
+COPY file:996df24c69b17d351426a6c0c0dfb153f784c21af81ae4ec36afa187063e1eda in /usr/local/share/geonetwork/geonetwork_context_template.xml 
+# Tue, 18 Jun 2024 18:42:05 GMT
+COPY file:d79abcd242af427d06aee0b458cf9b6d258c1203248aa30f6246fc26f5727df3 in /geonetwork-entrypoint.sh 
+# Tue, 18 Jun 2024 18:42:06 GMT
+RUN java -jar /usr/local/jetty/start.jar --create-startd --add-module=http-forwarded
+# Tue, 18 Jun 2024 18:42:06 GMT
+ENTRYPOINT ["/geonetwork-entrypoint.sh"]
+# Tue, 18 Jun 2024 18:42:06 GMT
+CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
+# Tue, 18 Jun 2024 18:42:06 GMT
+VOLUME [/catalogue-data]
+```
+
+-	Layers:
+	-	`sha256:8cddf7b9c8a772efac198a7ae8bdfe15df2e065bb85f15cb8a223f6b3a2dbf9c`  
+		Last Modified: Tue, 04 Jun 2024 16:08:03 GMT  
+		Size: 27.2 MB (27205244 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:ba61bfb12e507d61800c2fe5399b1bfd7ee7b2982cfef183447f0d34efdae73e`  
+		Last Modified: Wed, 05 Jun 2024 04:54:46 GMT  
+		Size: 16.8 MB (16776981 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:3294c18dc189f71e82fdd6779b6b0d69ba8defe38e3e26bb53031dfcf05f4add`  
+		Last Modified: Wed, 05 Jun 2024 04:55:50 GMT  
+		Size: 142.3 MB (142312188 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:3740768ca48a1b10a3ee451ba3bd551f320fa113d2505c2b877a1d3fd02a2f97`  
+		Last Modified: Wed, 05 Jun 2024 04:55:41 GMT  
+		Size: 174.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:f39f12d5bcae89c5e56ddf77b9c89b3bea51ce03ca339db4e9e846e4711e94ad`  
+		Last Modified: Wed, 05 Jun 2024 04:55:41 GMT  
+		Size: 734.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:578e72fbefc450f9b7a34b45fd1b2e2a51d705de2a1fbae6463ce97b7f8ab46b`  
+		Last Modified: Wed, 05 Jun 2024 07:57:54 GMT  
+		Size: 10.3 MB (10254976 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:6c4254939a361fb7d9ceacb768730f6557be74221e015a12cb33c508c207f276`  
+		Last Modified: Wed, 05 Jun 2024 07:57:54 GMT  
+		Size: 1.6 KB (1633 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:45ec61129cccab870bcbdd521601e078f050fc9b975d685744323bf0075de636`  
+		Last Modified: Wed, 05 Jun 2024 11:53:25 GMT  
+		Size: 480.9 KB (480915 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:af38ddd741aa09f14d2c2e775b86641ecbf348009db7ed439373c49e2728496e`  
+		Last Modified: Tue, 18 Jun 2024 18:42:56 GMT  
+		Size: 286.8 MB (286764051 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:ed405195021f3c5fb1ab2726b8c96ea11d181971f2ade316000a101490ff7b57`  
+		Last Modified: Tue, 18 Jun 2024 18:42:44 GMT  
+		Size: 554.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:0d0756bff4e0d48056e6b2f7b883be5fbc469ebb0cc32589bdda92d3ade2671e`  
+		Last Modified: Tue, 18 Jun 2024 18:42:43 GMT  
+		Size: 568.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:cacf6862df07fdf3900b5bbed12df478f3da6ca611db88928951d641631ba2fa`  
+		Last Modified: Tue, 18 Jun 2024 18:42:43 GMT  
+		Size: 138.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:latest`
 
 ```console
-$ docker pull geonetwork@sha256:6e9c63891cb00d6b93ab56e4d569f315f3968aa34e90b1ac5105d9f36696d654
+$ docker pull geonetwork@sha256:1befaf9030e6f82af9af3954c7445b6da9fc83673339f420e7f4c1c8148009e3
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -4808,14 +5420,14 @@ $ docker pull geonetwork@sha256:6e9c63891cb00d6b93ab56e4d569f315f3968aa34e90b1ac
 ### `geonetwork:latest` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:f0dd1560ff0aab8ab4a2a3d41794ff8dd0de4e74eabd79478801c4eaecc2a88c
+$ docker pull geonetwork@sha256:27c06f5fd954964eea4ce207c1e76c47d55d75541e11d33d27805cbdda29cfe2
 ```
 
 -	Docker Version: 23.0.11
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **488.3 MB (488318911 bytes)**  
+-	Total Size: **488.5 MB (488518480 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:4ee9da836586bfed6a56f4957e61ce2fc970122d55fa0134209a4e9190d613fa`
+-	Image ID: `sha256:75c52a94cb99579e362fe9554483607ab8e7097ddc24710c387597d51434350d`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -4896,23 +5508,23 @@ RUN apt-get -y update &&     apt-get -y install --no-install-recommends         
 USER jetty
 # Wed, 05 Jun 2024 12:08:46 GMT
 ENV GN_FILE=geonetwork.war
-# Wed, 05 Jun 2024 12:08:46 GMT
-ENV GN_VERSION=4.4.4
-# Wed, 05 Jun 2024 12:08:46 GMT
-ENV GN_DOWNLOAD_MD5=f2cd38d91dc0db4a126d0573b97e9103
-# Wed, 05 Jun 2024 12:09:03 GMT
+# Tue, 18 Jun 2024 18:20:42 GMT
+ENV GN_VERSION=4.4.5
+# Tue, 18 Jun 2024 18:20:42 GMT
+ENV GN_DOWNLOAD_MD5=a7b04339041e1e8217435dc6273ac3b8
+# Tue, 18 Jun 2024 18:21:47 GMT
 RUN cd /opt/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
-# Wed, 05 Jun 2024 12:09:05 GMT
+# Tue, 18 Jun 2024 18:21:48 GMT
 COPY file:996df24c69b17d351426a6c0c0dfb153f784c21af81ae4ec36afa187063e1eda in /usr/local/share/geonetwork/geonetwork_context_template.xml 
-# Wed, 05 Jun 2024 12:09:05 GMT
+# Tue, 18 Jun 2024 18:21:48 GMT
 COPY file:d79abcd242af427d06aee0b458cf9b6d258c1203248aa30f6246fc26f5727df3 in /geonetwork-entrypoint.sh 
-# Wed, 05 Jun 2024 12:09:06 GMT
+# Tue, 18 Jun 2024 18:21:49 GMT
 RUN java -jar /usr/local/jetty/start.jar --create-startd --add-module=http-forwarded
-# Wed, 05 Jun 2024 12:09:06 GMT
+# Tue, 18 Jun 2024 18:21:49 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Wed, 05 Jun 2024 12:09:06 GMT
+# Tue, 18 Jun 2024 18:21:49 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Wed, 05 Jun 2024 12:09:06 GMT
+# Tue, 18 Jun 2024 18:21:49 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -4949,34 +5561,34 @@ VOLUME [/catalogue-data]
 		Last Modified: Wed, 05 Jun 2024 12:10:27 GMT  
 		Size: 482.9 KB (482890 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:f3ebfaf2a536c282a90b9383dd1992f000aba45ef83a233a5caccf7cec786762`  
-		Last Modified: Wed, 05 Jun 2024 12:10:42 GMT  
-		Size: 286.6 MB (286564505 bytes)  
+	-	`sha256:140ad982f30c6ce6baee6b173449d3e377c89e20c7eb53cce1214ac2501360ad`  
+		Last Modified: Tue, 18 Jun 2024 18:22:48 GMT  
+		Size: 286.8 MB (286764073 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:0213d87abe79afa7f71f88141f457f64254038ee2ec4160ac35af7f8e3dd740c`  
-		Last Modified: Wed, 05 Jun 2024 12:10:27 GMT  
-		Size: 553.0 B  
+	-	`sha256:c157c6b21e78c72dec84efad45d7cd2b5ee9d3f39b3c285f2963041209051672`  
+		Last Modified: Tue, 18 Jun 2024 18:22:33 GMT  
+		Size: 555.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:d84f6ebc7af02915d8347c354da3ff3a79f23492d0f11e6e4fe5fb3f65a4c6a2`  
-		Last Modified: Wed, 05 Jun 2024 12:10:27 GMT  
+	-	`sha256:26855f3b3976044458252213fbf1fb97b016b6e841d9f0bd3421ced2ed0f31c8`  
+		Last Modified: Tue, 18 Jun 2024 18:22:33 GMT  
 		Size: 567.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:dad531c8148cce7f787ea54eff41a18940b0474cbdeef460b8f1a1d8c456d811`  
-		Last Modified: Wed, 05 Jun 2024 12:10:27 GMT  
-		Size: 139.0 B  
+	-	`sha256:fdf2140b15cb8c54af240fa037179e59ee21a169527295846fca049b1a603fb9`  
+		Last Modified: Tue, 18 Jun 2024 18:22:33 GMT  
+		Size: 138.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ### `geonetwork:latest` - linux; arm64 variant v8
 
 ```console
-$ docker pull geonetwork@sha256:f1bdd80a13fd17655895ac0ba3d821e6c45ccc5976e0295bf280135bc19f7bb8
+$ docker pull geonetwork@sha256:bbc95f789209cffa361bcc3b04d26ebdf568818d3fc762df2b201f1b2292f947
 ```
 
 -	Docker Version: 23.0.11
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **483.6 MB (483598643 bytes)**  
+-	Total Size: **483.8 MB (483798156 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:c76e6145d6a751d038b2fa31da0bbc8e19017dd085255c31068b57e9a0e27487`
+-	Image ID: `sha256:026e88f963e2339602be8553e3386b8e6d20746f8843a6f95a621266bd7ec0b7`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -5057,23 +5669,23 @@ RUN apt-get -y update &&     apt-get -y install --no-install-recommends         
 USER jetty
 # Wed, 05 Jun 2024 11:51:01 GMT
 ENV GN_FILE=geonetwork.war
-# Wed, 05 Jun 2024 11:51:01 GMT
-ENV GN_VERSION=4.4.4
-# Wed, 05 Jun 2024 11:51:01 GMT
-ENV GN_DOWNLOAD_MD5=f2cd38d91dc0db4a126d0573b97e9103
-# Wed, 05 Jun 2024 11:52:04 GMT
+# Tue, 18 Jun 2024 18:40:59 GMT
+ENV GN_VERSION=4.4.5
+# Tue, 18 Jun 2024 18:40:59 GMT
+ENV GN_DOWNLOAD_MD5=a7b04339041e1e8217435dc6273ac3b8
+# Tue, 18 Jun 2024 18:42:02 GMT
 RUN cd /opt/geonetwork/ &&      curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
-# Wed, 05 Jun 2024 11:52:07 GMT
+# Tue, 18 Jun 2024 18:42:04 GMT
 COPY file:996df24c69b17d351426a6c0c0dfb153f784c21af81ae4ec36afa187063e1eda in /usr/local/share/geonetwork/geonetwork_context_template.xml 
-# Wed, 05 Jun 2024 11:52:07 GMT
+# Tue, 18 Jun 2024 18:42:05 GMT
 COPY file:d79abcd242af427d06aee0b458cf9b6d258c1203248aa30f6246fc26f5727df3 in /geonetwork-entrypoint.sh 
-# Wed, 05 Jun 2024 11:52:08 GMT
+# Tue, 18 Jun 2024 18:42:06 GMT
 RUN java -jar /usr/local/jetty/start.jar --create-startd --add-module=http-forwarded
-# Wed, 05 Jun 2024 11:52:08 GMT
+# Tue, 18 Jun 2024 18:42:06 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Wed, 05 Jun 2024 11:52:08 GMT
+# Tue, 18 Jun 2024 18:42:06 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Wed, 05 Jun 2024 11:52:08 GMT
+# Tue, 18 Jun 2024 18:42:06 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -5110,19 +5722,19 @@ VOLUME [/catalogue-data]
 		Last Modified: Wed, 05 Jun 2024 11:53:25 GMT  
 		Size: 480.9 KB (480915 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:43834d290f9c5212ccdfc87b31556dff7b59f3179ae94c0c297b56e330e8f4b7`  
-		Last Modified: Wed, 05 Jun 2024 11:53:37 GMT  
-		Size: 286.6 MB (286564537 bytes)  
+	-	`sha256:af38ddd741aa09f14d2c2e775b86641ecbf348009db7ed439373c49e2728496e`  
+		Last Modified: Tue, 18 Jun 2024 18:42:56 GMT  
+		Size: 286.8 MB (286764051 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:9c058a84bf5bfe5a32dfc15ccee8e5d69e8395b55582cd723beeda27152febb3`  
-		Last Modified: Wed, 05 Jun 2024 11:53:25 GMT  
-		Size: 555.0 B  
+	-	`sha256:ed405195021f3c5fb1ab2726b8c96ea11d181971f2ade316000a101490ff7b57`  
+		Last Modified: Tue, 18 Jun 2024 18:42:44 GMT  
+		Size: 554.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:a0ff7acfca8cdf6827d8c48b38dc27f0ced40718bbb88280e345c2464e96ac33`  
-		Last Modified: Wed, 05 Jun 2024 11:53:25 GMT  
-		Size: 569.0 B  
+	-	`sha256:0d0756bff4e0d48056e6b2f7b883be5fbc469ebb0cc32589bdda92d3ade2671e`  
+		Last Modified: Tue, 18 Jun 2024 18:42:43 GMT  
+		Size: 568.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:2dc63bcea23bb796ad83ea65b74efc2c84f6878395d6732ae211f80e31e79d50`  
-		Last Modified: Wed, 05 Jun 2024 11:53:25 GMT  
-		Size: 137.0 B  
+	-	`sha256:cacf6862df07fdf3900b5bbed12df478f3da6ca611db88928951d641631ba2fa`  
+		Last Modified: Tue, 18 Jun 2024 18:42:43 GMT  
+		Size: 138.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
